# mdbook-fluent

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: test.yml
examples/example/: book.toml
examples/example/fluent/: ch01.ftl  ch02.ftl
examples/example/listing/: example.rs
examples/example/src/: chapter_1.md  chapter_2.md
src/: lib.rs
tests/: example_test.rs
